# seacu

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
logger/: CMakeLists.txt  seaculogger.cpp  seaculogger.h  seaculogger.hpp
seacudiff/: CMakeLists.txt  EditsSequenceTransformer.hpp  SeacudiffTypes.h  SequenceProcessor.cpp  SequenceProcessor.h  SimpleSequence.cpp  UmberSequence.cpp  UmberSequence.h  diff_emit.cpp  diff_emit.h  diff_histogram.cpp  diff_histogram.h  diff_opt.h  diff_standard.cpp  diff_standard.h  diff_standard.tpp  main.cpp  scrap.txt  seacudiff.cpp  seacudiff.h  seacudiff.natvis
seacupatch/: CMakeLists.txt  main.cpp  parsing.hpp  seacupatch.cpp  seacupatch.h
seacupatch/platform/: ConsoleMisc.h  ConsoleMiscWin32.cpp
test/: CMakeLists.txt
test/misc/: CMakeLists.txt  LoggerIO.cpp  MergeEdits.cpp
test/src/: CMakeLists.txt  LightlyComplexSeq.cpp  MatchingAndSimpleSeq.cpp  SimpleLines.cpp
