cmake_minimum_required(VERSION 3.21)

set(seacupatch_sources seacupatch.h seacupatch.cpp)
set(libseacupatch_runner_sources main.cpp platform/ConsoleMisc.h platform/ConsoleMiscWin32.cpp)

add_library(seacupatch ${seacupatch_sources})
target_compile_features(seacupatch PUBLIC cxx_std_23)
target_link_libraries(seacupatch PUBLIC taocpp::pegtl)
if(SEACU_ASAN_ENABLED)
 message(NOTICE "Seacupatch: Building with Address Sanitizer enabled.")
 if(MSVC)
  if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC" OR SEACU_FORCE_ASAN_ENABLED)
   target_compile_options(seacupatch PUBLIC /fsanitize=address)
  else()
   message(SEND_ERROR "Currently unable to support Address Sanitizer with MSVC-style Clang. Use -DSEACU_FORCE_ASAN_ENABLED to generate build proccess anyway.")
  endif()
 else()
  target_compile_options(seacupatch PUBLIC -fsanitize=address)
  target_link_options(seacupatch PUBLIC -fsanitize=address)
 endif()
endif()
add_executable(libseacupatch_runner ${libseacupatch_runner_sources})

target_link_libraries(libseacupatch_runner PRIVATE seacupatch)
